k8s/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: premium-realty-ingress
  namespace: premium-realty
spec:
  ingressClassName: nginx
  rules:
    - host: premium-realty.local
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: premium-realty-service
                port:
                  number: 80
